--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<?php
-date_default_timezone_set("Asia/jakarta");
-    $date = date("l, d-M-Y");
-    $time = date("H:i");
-?>
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -21,8 +15,21 @@ date_default_timezone_set("Asia/jakarta");
     <!-- brand start-->
     <section class="brand-sm fs-3 d-flex justify-content-between fw-normal pt-3 ps-3">
       <p class="fw-bolder">waskifree</p>
-      <p class="time text-center shadow"><?= $date; ?> <br> <?= $time; ?></p>
-    
+      <p class="time text-center"><span id="tanggalwaktu"></span></p>
+      <script>
+        var tw = new Date();
+        if (tw.getTimezoneOffset() == 0) a = tw.getTime() + 7 * 60 * 60 * 1000;
+        else a = tw.getTime();
+        tw.setTime(a);
+        var tahun = tw.getFullYear();
+        var hari = tw.getDay();
+        var bulan = tw.getMonth();
+        var tanggal = tw.getDate();
+        var hariarray = new Array("Minggu,", "Senin,", "Selasa,", "Rabu,", "Kamis,", "Jum'at,", "Sabtu,");
+        var bulanarray = new Array("Januari", "Februari", "Maret", "April", "Mei", "Juni", "Juli", "Agustus", "September", "Oktober", "Nopember", "Desember");
+        document.getElementById("tanggalwaktu").innerHTML =
+          hariarray[hari] + " " + tanggal + " " + bulanarray[bulan] + " " + tahun + " Jam " + (tw.getHours() < 10 ? "0" : "") + tw.getHours() + ":" + (tw.getMinutes() < 10 ? "0" : "") + tw.getMinutes() + " W.I.B ";
+      </script>
     </section>
     <!-- brand end -->
 
@@ -42,7 +49,7 @@ date_default_timezone_set("Asia/jakarta");
           </a>
         </div>
         <div class="col-3">
-          <a href="../about/about.php">
+          <a href="about/about.html">
             <div class="bj">
               <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
                 <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
@@ -52,7 +59,7 @@ date_default_timezone_set("Asia/jakarta");
           </a>
         </div>
         <div class="col-3">
-          <a href="../skill/skill.php"
+          <a href="skill/skill.html"
             ><div class="bj">
               <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-speedometer" viewBox="0 0 16 16">
                 <path
@@ -64,7 +71,7 @@ date_default_timezone_set("Asia/jakarta");
           </a>
         </div>
         <div class="col-3">
-          <a href="../contact/contact.php">
+          <a href="contact/contact.html">
             <div class="bj">
               <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-chat-right-text-fill" viewBox="0 0 16 16">
                 <path
@@ -87,8 +94,8 @@ date_default_timezone_set("Asia/jakarta");
             <img class="float-start img-fluid" src="img/aryo.jpg" alt="aryo" />
             <div class="idt-sm mt-3 ms-2">
               <p class="text-start">
-                <a class="text-decoration-none" href="../about/about.php">Aryo Waskito</a> <br />an engineer, hello welcome to my website <br />
-                <a class="text-decoration-none pb-3" href="../about/about.php">click to see profile</a>
+                <a class="text-decoration-none" href="about/about.html">Aryo Waskito</a> <br />an engineer, hello welcome to my website <br />
+                <a class="text-decoration-none pb-3" href="about/about.html">click to see profile</a>
               </p>
             </div>
           </div>
@@ -96,7 +103,7 @@ date_default_timezone_set("Asia/jakarta");
           <div class="col-6">
             <!-- skill start -->
             <div class="skill">
-              <a href="../skill/skill.php">
+              <a href="skill/skill.html">
                 <p>html</p>
                 <div class="progress m-3">
                   <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">70%</div>
